overflow issues

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
     display: flex;
     min-height: 100vh;
     width: 100%;
-
 }
 
 a {
@@ -66,7 +65,7 @@ img[src="images/odin-lined.png"] {
 
 .backgorund-image-credit {
     position: relative;
-    top: 510px;
+    top: 500px;
     left: 70px;
 }
 
@@ -74,7 +73,7 @@ img[src="images/odin-lined.png"] {
 .right-section-container {
     width: 100%;
     min-height: 100vh;
-    padding-top: 115px;
+    padding-top: 100px;
 }
 
 .right-section {
@@ -139,7 +138,6 @@ input:valid:not(:placeholder-shown) {
 input:invalid:not(:placeholder-shown) {
     border-color: red;
 }
-
 
 button[type="submit"], .form+p {
     margin-left: 30px;
